- fix paypal transparency button - fix gallery lower images no fancybox

--- a/order.html
+++ b/order.html
@@ -77,7 +77,7 @@
                                         <form style="width:100px;" action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
                                             <input type="hidden" name="cmd" value="_s-xclick" />
                                             <input type="hidden" name="hosted_button_id" value="GUN6UYYEVAV8Y" />
-                                            <input type="image" src="https://www.paypalobjects.com/he_IL/i/btn/btn_buynow_LG.gif" border="0" name="submit" alt="PayPal - הדרך הקלה והבטוחה לשלם באינטרנט!" />
+                                            <input type="image" src="images/btn_buynow_LG.gif" border="0" name="submit" alt="PayPal - הדרך הקלה והבטוחה לשלם באינטרנט!" />
                                             <img alt="" border="0" src="https://www.paypalobjects.com/he_IL/i/scr/pixel.gif" width="1" height="1" />
 
                                         </form>
@@ -102,7 +102,7 @@
                                         <form style="width:100px;" action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
                                             <input type="hidden" name="cmd" value="_s-xclick" />
                                             <input type="hidden" name="hosted_button_id" value="R6NBY36NSLKEG" />
-                                            <input type="image" src="https://www.paypalobjects.com/he_IL/i/btn/btn_buynow_LG.gif" border="0" name="submit" alt="PayPal - הדרך הקלה והבטוחה לשלם באינטרנט!" />
+                                            <input type="image" src="images/btn_buynow_LG.gif" border="0" name="submit" alt="PayPal - הדרך הקלה והבטוחה לשלם באינטרנט!" />
                                             <img alt="" border="0" src="https://www.paypalobjects.com/he_IL/i/scr/pixel.gif" width="1" height="1" />
 
                                         </form>
@@ -128,7 +128,7 @@
                                         <form style="width:100px;" action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
                                             <input type="hidden" name="cmd" value="_s-xclick" />
                                             <input type="hidden" name="hosted_button_id" value="HPAKZZQFHWH74" />
-                                            <input type="image" src="https://www.paypalobjects.com/he_IL/i/btn/btn_buynow_LG.gif" border="0" name="submit" alt="PayPal - הדרך הקלה והבטוחה לשלם באינטרנט!" />
+                                            <input type="image" src="images/btn_buynow_LG.gif" border="0" name="submit" alt="PayPal - הדרך הקלה והבטוחה לשלם באינטרנט!" />
                                             <img alt="" border="0" src="https://www.paypalobjects.com/he_IL/i/scr/pixel.gif" width="1" height="1" />
 
                                         </form>
@@ -154,7 +154,7 @@
                                         <form style="width:100px;" action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
                                             <input type="hidden" name="cmd" value="_s-xclick" />
                                             <input type="hidden" name="hosted_button_id" value="L7BPB88P7GPVU" />
-                                            <input type="image" src="https://www.paypalobjects.com/he_IL/i/btn/btn_buynow_LG.gif" border="0" name="submit" alt="PayPal - הדרך הקלה והבטוחה לשלם באינטרנט!" />
+                                            <input type="image" src="images/btn_buynow_LG.gif" border="0" name="submit" alt="PayPal - הדרך הקלה והבטוחה לשלם באינטרנט!" />
                                             <img alt="" border="0" src="https://www.paypalobjects.com/he_IL/i/scr/pixel.gif" width="1" height="1" />
 
                                         </form>
@@ -178,7 +178,7 @@
                                         <form style="width:100px;" action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
                                             <input type="hidden" name="cmd" value="_s-xclick" />
                                             <input type="hidden" name="hosted_button_id" value="LYD9AJ59UPLCG" />
-                                            <input type="image" src="https://www.paypalobjects.com/he_IL/i/btn/btn_buynow_LG.gif" border="0" name="submit" alt="PayPal - הדרך הקלה והבטוחה לשלם באינטרנט!" />
+                                            <input type="image" src="images/btn_buynow_LG.gif" border="0" name="submit" alt="PayPal - הדרך הקלה והבטוחה לשלם באינטרנט!" />
                                             <img alt="" border="0" src="https://www.paypalobjects.com/he_IL/i/scr/pixel.gif" width="1" height="1" />
 
                                         </form>
@@ -203,7 +203,7 @@
                                         <form style="width:100px;" action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
                                             <input type="hidden" name="cmd" value="_s-xclick" />
                                             <input type="hidden" name="hosted_button_id" value="DSSBG5MQEJ7Q8" />
-                                            <input type="image" src="https://www.paypalobjects.com/he_IL/i/btn/btn_buynow_LG.gif" border="0" name="submit" alt="PayPal - הדרך הקלה והבטוחה לשלם באינטרנט!" />
+                                            <input type="image" src="images/btn_buynow_LG.gif" border="0" name="submit" alt="PayPal - הדרך הקלה והבטוחה לשלם באינטרנט!" />
                                             <img alt="" border="0" src="https://www.paypalobjects.com/he_IL/i/scr/pixel.gif" width="1" height="1" />
 
                                         </form>
@@ -229,7 +229,7 @@
                                         <form style="width:100px;" action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
                                             <input type="hidden" name="cmd" value="_s-xclick" />
                                             <input type="hidden" name="hosted_button_id" value="D5UXDY8PSZU32" />
-                                            <input type="image" src="https://www.paypalobjects.com/he_IL/i/btn/btn_buynow_LG.gif" border="0" name="submit" alt="PayPal - הדרך הקלה והבטוחה לשלם באינטרנט!" />
+                                            <input type="image" src="images/btn_buynow_LG.gif" border="0" name="submit" alt="PayPal - הדרך הקלה והבטוחה לשלם באינטרנט!" />
                                             <img alt="" border="0" src="https://www.paypalobjects.com/he_IL/i/scr/pixel.gif" width="1" height="1" />
 
                                         </form>
@@ -255,7 +255,7 @@
                                         <form style="width:100px;" action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
                                             <input type="hidden" name="cmd" value="_s-xclick" />
                                             <input type="hidden" name="hosted_button_id" value="9Y3T53ATWBZ9E" />
-                                            <input type="image" src="https://www.paypalobjects.com/he_IL/i/btn/btn_buynow_LG.gif" border="0" name="submit" alt="PayPal - הדרך הקלה והבטוחה לשלם באינטרנט!" />
+                                            <input type="image" src="images/btn_buynow_LG.gif" border="0" name="submit" alt="PayPal - הדרך הקלה והבטוחה לשלם באינטרנט!" />
                                             <img alt="" border="0" src="https://www.paypalobjects.com/he_IL/i/scr/pixel.gif" width="1" height="1" />
 
                                         </form>
@@ -282,7 +282,7 @@
                                         <form style="width:100px;" action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
                                             <input type="hidden" name="cmd" value="_s-xclick" />
                                             <input type="hidden" name="hosted_button_id" value="8GXETY543KKT8" />
-                                            <input type="image" src="https://www.paypalobjects.com/he_IL/i/btn/btn_buynow_LG.gif" border="0" name="submit" alt="PayPal - הדרך הקלה והבטוחה לשלם באינטרנט!" />
+                                            <input type="image" src="images/btn_buynow_LG.gif" border="0" name="submit" alt="PayPal - הדרך הקלה והבטוחה לשלם באינטרנט!" />
                                             <img alt="" border="0" src="https://www.paypalobjects.com/he_IL/i/scr/pixel.gif" width="1" height="1" />
 
                                         </form>
@@ -308,7 +308,7 @@
                                         <form style="width:100px;" action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
                                             <input type="hidden" name="cmd" value="_s-xclick" />
                                             <input type="hidden" name="hosted_button_id" value="X9DBPSBUDXR92" />
-                                            <input type="image" src="https://www.paypalobjects.com/he_IL/i/btn/btn_buynow_LG.gif" border="0" name="submit" alt="PayPal - הדרך הקלה והבטוחה לשלם באינטרנט!" />
+                                            <input type="image" src="images/btn_buynow_LG.gif" border="0" name="submit" alt="PayPal - הדרך הקלה והבטוחה לשלם באינטרנט!" />
                                             <img alt="" border="0" src="https://www.paypalobjects.com/he_IL/i/scr/pixel.gif" width="1" height="1" />
 
                                         </form>
@@ -335,7 +335,7 @@
                                         <form style="width:100px;" action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
                                             <input type="hidden" name="cmd" value="_s-xclick" />
                                             <input type="hidden" name="hosted_button_id" value="9H6N5CC9EH8V4" />
-                                            <input type="image" src="https://www.paypalobjects.com/he_IL/i/btn/btn_buynow_LG.gif" border="0" name="submit" alt="PayPal - הדרך הקלה והבטוחה לשלם באינטרנט!" />
+                                            <input type="image" src="images/btn_buynow_LG.gif" border="0" name="submit" alt="PayPal - הדרך הקלה והבטוחה לשלם באינטרנט!" />
                                             <img alt="" border="0" src="https://www.paypalobjects.com/he_IL/i/scr/pixel.gif" width="1" height="1" />
 
                                         </form>
