--- a/gallery.html
+++ b/gallery.html
@@ -33,7 +33,10 @@
                             <hr />
                             <div>
                                 דיוקן יחיד/זוגי/קבוצתי כרצונכם - בצבע או בעפרון.
-                            </div>
+                            </div> 
+                            <a href="images/gallery/g2-15.jpg" class="fancybox fancybox.iframe">
+                                <img alt="preview image" id="Img2-15" class="galleryimage" src="images/gallery/preview/g2-15.jpg" />
+                            </a>
                             <a href="images/gallery/g2-8.jpg" class="fancybox fancybox.iframe">
                                 <img alt="preview image" id="Img2-8" class="galleryimage" src="images/gallery/preview/g2-8.jpg" />
                             </a>
@@ -163,6 +166,9 @@
                             <div>
                                 ציור פנים של חבר או חברה בשילוב גוף של גיבור על, זמרת מפורסמת, שחקן כדורגל או דמות היסטורית יכול להיות מתנה נהדרת! כל שעליכם לעשות הוא לשלוח תמונת פנים של חבר או חברה ותמונת בסיס (אפשר גם לשלוח קישור), בצירוף הערות או הנחיות - אם יש.
                             </div>
+                            <a href="images/gallery/g4-3.jpg">
+                                <img alt="preview image" id="Img4-3" class="galleryimage" src="images/gallery/preview/g4-3.jpg" />
+                            </a>
                             <a href="images/gallery/g4-1.jpg">
                                 <img alt="preview image" id="Img4" class="galleryimage" src="images/gallery/preview/g4-1.jpg" />
                             </a>
