--- a/gallery.html
+++ b/gallery.html
@@ -43,6 +43,9 @@
                             <a href="images/gallery/g2-14.jpg" class="fancybox fancybox.iframe">
                                 <img alt="preview image" id="Img2-14" class="galleryimage" src="images/gallery/preview/g2-14.jpg" />
                             </a>
+                            <a href="images/gallery/g2-16.jpg" class="fancybox fancybox.iframe">
+                                <img alt="preview image" id="Img2-16" class="galleryimage" src="images/gallery/preview/g2-16.jpg" />
+                            </a>
                             <a href="images/gallery/g2-7.jpg" class="fancybox fancybox.iframe">
                                 <img alt="preview image" id="Img2-7" class="galleryimage" src="images/gallery/preview/g2-7.jpg" />
                             </a>
