added baby image

--- a/gallery.html
+++ b/gallery.html
@@ -169,6 +169,9 @@
                             <div>
                                 ציור פנים של חבר או חברה בשילוב גוף של גיבור על, זמרת מפורסמת, שחקן כדורגל או דמות היסטורית יכול להיות מתנה נהדרת! כל שעליכם לעשות הוא לשלוח תמונת פנים של חבר או חברה ותמונת בסיס (אפשר גם לשלוח קישור), בצירוף הערות או הנחיות - אם יש.
                             </div>
+                            <a href="images/gallery/g4-4.jpg">
+                                <img alt="preview image" id="Img4-4" class="galleryimage" src="images/gallery/preview/g4-4.jpg" />
+                            </a>
                             <a href="images/gallery/g4-3.jpg">
                                 <img alt="preview image" id="Img4-3" class="galleryimage" src="images/gallery/preview/g4-3.jpg" />
                             </a>
