--- a/gallery.html
+++ b/gallery.html
@@ -141,6 +141,9 @@
                             <a href="images/gallery/g9-7.jpg">
                                 <img alt="preview image" id="Img9-7" class="galleryimage" src="images/gallery/preview/g9-7.jpg" />
                             </a>
+							<a href="images/gallery/g9-8.jpg">
+                                <img alt="preview image" id="Img9-8" class="galleryimage" src="images/gallery/preview/g9-8.jpg" />
+                            </a>
                             <div class="imgtitle">
                                 אבסטרקטי
                             </div>
@@ -161,6 +164,8 @@
                             </a>
                             </a><a href="images/gallery/g3-7.jpg">
                                 <img alt="preview image" id="Img3-7" class="galleryimage" src="images/gallery/preview/g3-7.jpg" />
+                            </a><a href="images/gallery/g3-8.jpg">
+                                <img alt="preview image" id="Img3-8" class="galleryimage" src="images/gallery/preview/g3-8.jpg" />
                             </a>
                             <div class="imgtitle">
                                 משולב
@@ -226,6 +231,10 @@
                             <a href="images/gallery/g5-8.jpg">
                                 <img alt="preview image" id="Img5-8" class="galleryimage"
                                      src="images/gallery/preview/g5-8.jpg" />
+                            </a>
+                            <a href="images/gallery/g5-11.jpg">
+                                <img alt="preview image" id="Img5-11" class="galleryimage"
+                                     src="images/gallery/preview/g5-11.jpg" />
                             </a>
                             <div class="imgtitle">
                                 ציורי גוף
